Word Counter - Javascript mini project completed

--- a/Word Counter/index.html
+++ b/Word Counter/index.html
@@ -24,6 +24,11 @@
             <label for="no-space">Count Without Spaces</label><br>
         </form>
 
+        <div class="alert d_none">
+            <span class="closebtn">&times;</span>
+            Type a word and check one checkbox!
+        </div>
+
         <button type="button" id="count-btn">Count</button>
         
         <p id="result">0</p>
