--- a/DZ3/index.html
+++ b/DZ3/index.html
@@ -71,7 +71,7 @@
             <div class="form-group mb-3">
                 <label for="imdb">IMDB:</label>
                 <div>
-                    <input type="text" id="imdb" class="form-control-lg">
+                    <input type="number" id="imdb" class="form-control-lg">
                 </div>
             </div>
 
