--- a/DZ3/index.html
+++ b/DZ3/index.html
@@ -88,6 +88,8 @@
                 <input type="submit" class="btn btn-success btn-lg" value="Dodaj novi film" id="film-submit">
             </div>
         </form>
+
+        <!-- Tu ubacujemo tabelu -->
     </div>
 
 
