--- a/Vezbanje/tabela.html
+++ b/Vezbanje/tabela.html
@@ -63,6 +63,36 @@
         <button class="klik-sort" id="sort-imdb">IMDB</button>
     </div>
 
+
+    <form id="forma" style="color: white;">
+        <p>
+            <label for="id">ID</label>
+            <input type="number" id="id">
+        </p>
+
+        <p>
+            <label for="naziv">Naziv</label>
+            <input type="text" id="naziv">
+        </p>
+
+        <p>
+            <label for="zanr">Zanr</label>
+            <input type="text" id="zanr">
+        </p>
+
+        <p>
+            <label for="godiste">Godiste</label>
+            <input type="number" id="godiste">
+        </p>
+
+        <p>
+            <label for="id">imdb</label>
+            <input type="text" id="imdb">
+        </p>
+
+        <button type="button" onclick="dodajRed()">Dodaj red</button>
+    </form>
+
     <script src="js/tabela.js"></script>
 </body>
 </html>
